chamber/styles/base.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Index, Discover page css */
body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
    padding: 0;
    color: #000;
    background-color: #f5f5f5;
}

header {
    background-color: #646F58;
    color: #f5f5f5;
    padding: 1rem;
    display: flex;
    justify-content: center;
    align-items: center;
}

header h1 {
    padding: 2rem;
}
header img {
    height: auto
}

nav {
    background-color: #464f3d;
    width: 100%;
    margin: 0 auto;
}

nav ul {
    list-style-type: none;
    padding: .75rem 1vw;
    margin: 0;
    text-align: center;
    display: flex;
    flex-direction: column;
}

nav ul li {
    margin: 0.5rem;
}

nav ul li a {
    display: block;
    color: #fff;
    padding: .5rem;
    text-decoration: none;
}

.active a {
    background-color: #515947;
}

ul.menuLinks {
    display: none;
    list-style-type: none;
}

ul.menuLinks.open {
    display: block;
}

#myButton::before {
    content: "";
}

#myButton.open::before {
    content: "x";
}

#myButton {
    font-size: 2rem;
    background: none;
    border: none;
    color: #fff;
    cursor: pointer;
    width: 100%;
    text-align: left;
    padding: .5rem 2vw;
}

main {
    margin: 0 auto;
    padding: 1rem;
    display: grid;
    grid-template-columns: 1fr;
    gap: 1rem;
    align-items: start;
    width: 95%;
}

.card {
    background-color: #fff;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    padding: 1rem;
    margin-top: 1rem;
}


/* Discover only css */
.discover {
    margin: 0 auto;
    padding: 1rem;
    display: grid;
    grid-template-columns: 1fr;
    gap: 1rem;
    align-items: start;
    width: 95%;
}

.card2 {
    background-color: #fff;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    padding: 1rem;
    margin-top: 1rem;
}

.sidebar {
    order: 1;
}

.image {
    order: 2;
}

.hover {
    margin: 1rem;
}


/* Index, discover page css */
h1 {
    padding: 1rem;
    color: #fff;
    background-color: #646F58;
    text-align: center;
}

h2 {
    font-weight: 700;
    padding: 1rem;
    color: #fff;
    background-color: #646F58;
}

h3 {
    padding: .5rem;
    margin-top: 1rem;
}

section ul {
    list-style-type: none;
    padding: .5rem;
    margin-top: 1rem;
}

section ul li {
    padding: .25rem;
}

section p {
    padding: .5rem;
    margin-top: 1rem;
    line-height: 180%;
}


/* Index only css-.hero */
.hero {
    width: 100%;
    margin: 0;
    padding: 0;
    position: relative;
}

.hero img {
    width: 100%;
    height: auto;
    display: block;
}

.hero span {
    font-family: 'Roboto', sans-serif;
    font-weight: 600;
    font-size: 1.15rem;
    position: absolute;
    bottom: 5%;
    left: 5%;
    color: #fff;
    background-color: rgba(255, 255, 255, 0.5);
    padding: 1rem;
    text-align: center;
}

footer {
    background-color: #646F58;
    color: #fff;
    text-align: center;
    padding: 1rem;
}

